Also fixed paragraph shifting.

--- a/york-prerequisites/src/App.css
+++ b/york-prerequisites/src/App.css
@@ -13,7 +13,7 @@
 .navbar .right-side{
     flex: 10%;
     list-style: none;
-    padding-right: 20px;
+    padding-right: 3%;
     display: flex;
     
 }
